# stellar-digital-identity

./: .env.example  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  README_VI.md  check-build.ps1  env-check.ps1  manage.ps1  package.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  config.js
frontend/src/components/: Dashboard.jsx  GrantAccess.jsx  ManageIdentities.jsx  RegisterIdentity.jsx  VerifyIdentity.jsx
frontend/src/services/: contractService.js
scripts/: deploy.ps1  test.ps1  utils.ps1
src/: lib.rs  main.rs  test.rs
test_snapshots/test/test/: test_basic_functionality.1.json  test_simple_workflow.1.json
